--- a/prerevolutionary-tinder-client/src/main/resources/messages_ru_RU.properties
+++ b/prerevolutionary-tinder-client/src/main/resources/messages_ru_RU.properties
@@ -9,18 +9,18 @@ callback.like.history=Любимцы
 callback.find.suitable.person=Поиск
 callback.previous=<-
 callback.next=->
-callback.person.previous=<-
-callback.person.next=->
+callback.person.previous=-
+callback.person.next=+
 callback.menu=Меню
 callback.edit=Редактировать
 
 
 message.hello=Здравствуйте
 message.edit.person=Заполните анкету
-message.enter.gender=Вы сударъ или сударыня?
+message.enter.gender=вы сударъ или сударыня?
 message.enter.name=Какъ Васъ величать?
-message.enter.description=Опишите себе
-message.enter.search.term=Кого вы ищете?
+message.enter.description=опишите себе
+message.enter.search.term=кого вы ищете?
 message.no.person.search.term=Подходящих кандидатур нет
 message.no.like.history=У вас нет любимцев
 message.error=Что-то пошло не так
