add test translate

--- a/prerevolutionary-tinder-client/src/main/resources/messages_ru_RU.properties
+++ b/prerevolutionary-tinder-client/src/main/resources/messages_ru_RU.properties
@@ -17,10 +17,10 @@ callback.edit=Редактировать
 
 message.hello=Здравствуйте
 message.edit.person=Заполните анкету
-message.enter.gender=вы сударъ или сударыня?
+message.enter.gender=Вы сударъ или сударыня?
 message.enter.name=Какъ Васъ величать?
-message.enter.description=опишите себе
-message.enter.search.term=кого вы ищете?
+message.enter.description=Опишите себе
+message.enter.search.term=Кого вы ищете?
 message.no.person.search.term=Подходящих кандидатур нет
 message.no.like.history=У вас нет любимцев
 message.error=Что-то пошло не так
